--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "version": "3.6.0"
   },
   "dependencies": {
+    "cryptiles": "^4.1.2",
+    "extend": "^3.0.2",
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
@@ -15,6 +17,9 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "randomatic": "^3.0.0"
   }
 }
